--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb 13 17:19:35 1999  Assar Westerlund  <assar@sics.se>
+
+	* ftp/ftp.c (copy_stream): initialize `werr'
+
 Tue Dec  1 14:44:29 1998  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* ftpd/Makefile.am: link with extra libs for aix
