--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -35,6 +35,10 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @email{marc@@cygnus.com}
 @item Luke Howard
 @email{lukeh@@xedoc.com.au}
+@item Brandon S. Allbery KF8NH
+@email{allbery@@kf8nh.apk.net}
+@item Jun-ichiro itojun Hagino
+@email{itojun@@kame.net}
 @item and we hope that those not mentioned here will forgive us.
 @end table
 
