*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5370 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,5 +1,7 @@
 Sat Feb 13 17:12:53 1999  Assar Westerlund  <assar@sics.se>
 
+	* emalloc.c, erealloc.c, estrup.c: new files
+
 	* roken.h.in (mkstemp, gethostname): also includes prototypes if
  	they are needed.
 
