mention /dev/null.  From: Simon Josefsson <jas@pdc.kth.se>
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5377 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ftpd/ftpd.8
+++ b/appl/ftp/ftpd/ftpd.8
@@ -381,6 +381,10 @@ numbers. Remember to remove any passwords from these files.
 The file
 .Pa motd ,
 if present, will be printed after a successful login.
+.It Pa ~ftp/dev 
+Put a copy of
+.Xr /dev/null 7
+here.
 .It Pa ~ftp/pub
 Traditional place to put whatever you want to make public.
 .El
