--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,9 @@
+1999-02-16  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.in (SOURCES): add fnmatch
+
+	* roken-common.h (abs): add
+
 Sat Feb 13 17:12:53 1999  Assar Westerlund  <assar@sics.se>
 
 	* emalloc.c, erealloc.c, estrup.c: new files
