--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,24 @@
+Wed Feb  3 22:01:55 1999  Assar Westerlund  <assar@sics.se>
+
+	* rxtelnet.in: print out what telnet program we are running.  From
+ 	<nissej@pdc.kth.se>
+
+	* tenletxr.in: add --version, [-h | --help], -v
+
+	* rxterm.in: add --version, [-h | --help], -v
+
+	* rxtelnet.in: add --version, [-h | --help], -v
+
+	* Makefile.in (rxterm, rxtelnet, telnetxr): substitute VERSION and
+ 	PACKAGE
+
+	* rxtelnet.in: update usage string
+
+Fri Dec 18 17:42:02 1998  Assar Westerlund  <assar@sics.se>
+
+	* common.c (replace_cookie): try to handle the case of not finding
+ 	any cookies
+
 Sun Nov 22 10:31:53 1998  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.in (WFLAGS): set
