--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 19 07:04:14 1999  Assar Westerlund  <assar@squid.pdc.kth.se>
+
+	* Release 0.1a
+
 Fri Feb 19 06:50:35 1999  Assar Westerlund  <assar@sics.se>
 
 	* Release 0.1a
