--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Sat Feb 20 15:48:06 1999  Johan Danielsson  <joda@blubb.pdc.kth.se>
 
+	* lib/krb5/crypto.c (DES3_string_to_key): make this actually do
+ 	what the draft said it should
+
 	* lib/hdb/convert_db.c: little program for database conversion
 
 	* lib/hdb/db.c (DB_open): try to open database w/o .db extension
