--- a/docs/manpages/nmblookup.1
+++ b/docs/manpages/nmblookup.1
@@ -1,4 +1,4 @@
-.TH NMBLOOKUP 1 "07 Feb 1999" "nmblookup 2.0.1"
+.TH "nmblookup " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 nmblookup \- NetBIOS over TCP/IP client used to lookup NetBIOS names
