--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -1,4 +1,4 @@
-.TH TESTPARM 1 "07 Feb 1999" "testparm 2.0.1"
+.TH "testparm " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 testparm \- check an smb\&.conf configuration file for internal correctness
