--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Sat Feb 27 22:17:30 1999  Johan Danielsson  <joda@blubb.pdc.kth.se>
 
+	* lib/krb5/keytab.c (fkt_remove_entry): make this work
+
 	* admin/ktutil.c: add minimally working `get' command
 
 Sat Feb 27 19:44:49 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
