--- a/docs/manpages/smbclient.1
+++ b/docs/manpages/smbclient.1
@@ -1,4 +1,4 @@
-.TH "smbclient " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBCLIENT 1 "28 Feb 1999" "smbclient 2.0.3"
 .PP 
 .SH "NAME" 
 smbclient \- ftp-like client to access SMB/CIFS resources on servers
