*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5451 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -11,6 +11,8 @@ Tue Nov 24 23:20:54 1998  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.in: build and install pfrom
 
+	* pfrom.in: bindir -> libexecdir
+
 Sun Nov 22 15:33:52 1998  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* push.c: eliminate some warnings
