--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -14,6 +14,11 @@ Wed Feb  3 22:01:55 1999  Assar Westerlund  <assar@sics.se>
 
 	* rxtelnet.in: update usage string
 
+Fri Jan 22 23:51:05 1999  Assar Westerlund  <assar@sics.se>
+
+	* common.c (verify_and_remove_cookies): give back a meaningful
+ 	error message if we're using the wrong cookie
+
 Fri Dec 18 17:42:02 1998  Assar Westerlund  <assar@sics.se>
 
 	* common.c (replace_cookie): try to handle the case of not finding
