--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  1 10:49:38 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* ftpd/logwtmp.c: HAVE_UT_* -> HAVE_STRUCT_UTMP*_UT_*
+
 Sat Feb 13 17:19:35 1999  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ftpd.c (match): remove #ifdef HAVE_FNMATCH.  We have a
