--- a/appl/otp/ChangeLog
+++ b/appl/otp/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar  4 19:45:40 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: DESTDIR
+
 Sat Feb 27 19:44:25 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: add
