--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar  5 15:14:29 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* pop_send.c: fix handling of messages w/o body
+
 Sun Nov 22 10:33:29 1998  Assar Westerlund  <assar@sics.se>
 
 	* pop_pass.c (pop_pass): try to always log
