--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  8 11:50:06 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* pop_init.c: use print_version
+
 Fri Mar  5 15:14:29 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* pop_send.c: fix handling of messages w/o body
