--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 10 20:02:55 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* ftpd/ftpd_locl.h: remove ifdef HAVE_FNMATCH
+
 Mon Mar  8 21:29:24 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* ftpd/ftpd.c: re-add version in greeting message
