--- a/docs/manpages/nmbd.8
+++ b/docs/manpages/nmbd.8
@@ -1,4 +1,4 @@
-.TH NMBD 8 "28 Feb 1999" "nmbd 2.0.3"
+.TH "nmbd" "8" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 nmbd \- NetBIOS name server to provide NetBIOS over IP
