--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,5 +1,7 @@
 Thu Mar 11 14:54:59 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
+	* ftp/Makefile.in: WFLAGS
+
 	* ftp/ruserpass.c: add some if-braces
 
 Wed Mar 10 20:02:55 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
