--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,9 @@
+Thu Mar 11 14:58:32 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* writeauth.c: protoize
+
+	* common.c: fix some warnings
+
 Wed Mar 10 19:33:39 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* kxd.c: openlog -> roken_openlog
