--- a/lib/otp/ChangeLog
+++ b/lib/otp/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov 22 10:44:16 1998  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.in (WFLAGS): set
+
 Mon May 25 05:27:07 1998  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.in (clean): try to remove shared library debris
