*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5537 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar 13 22:17:29 1999  Assar Westerlund  <assar@sics.se>
+
+	* pop_parse.c (pop_parse): cast when calling is* to get rid of a
+ 	warning
+
 Mon Mar  8 11:50:06 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* pop_init.c: use print_version
