--- a/lib/otp/ChangeLog
+++ b/lib/otp/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 13 22:27:10 1999  Assar Westerlund  <assar@sics.se>
+
+	* otp_parse.c: unsigned-ify
+
 Sun Nov 22 10:44:16 1998  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.in (WFLAGS): set
