*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5539 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 13 23:31:35 1999  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.in (SOURCES): add glob.c
+
 Thu Mar 11 15:02:21 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* iruserok.c: move innetgr() to separate file
