--- a/lib/editline/ChangeLog
+++ b/lib/editline/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 17:10:34 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* editline.c: remove protos for read/write
+
 Sat Mar 13 22:23:22 1999  Assar Westerlund  <assar@sics.se>
 
 	* <roken.h>: add
