*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5558 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 22:28:37 1999  Assar Westerlund  <assar@sics.se>
+
+	* ftpd/ftpd.c: krb_verify_user_multiple -> krb_verify_user
+
 Thu Mar 11 14:54:59 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* ftp/Makefile.in: WFLAGS
