*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5559 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 22:28:52 1999  Assar Westerlund  <assar@sics.se>
+
+	* pop_pass.c: krb_verify_user_multiple -> krb_verify_user
+
 Sat Mar 13 22:17:29 1999  Assar Westerlund  <assar@sics.se>
 
 	* pop_parse.c (pop_parse): cast when calling is* to get rid of a
