--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,5 +1,7 @@
 Tue Mar 16 22:28:37 1999  Assar Westerlund  <assar@sics.se>
 
+	* ftpd/ftpd_locl.h: add krb5.h to get heimdal_version
+
 	* ftpd/ftpd.c: krb_verify_user_multiple -> krb_verify_user
 
 Thu Mar 11 14:54:59 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
