--- a/lib/com_err/ChangeLog
+++ b/lib/com_err/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 22:30:05 1999  Assar Westerlund  <assar@sics.se>
+
+	* parse.y: use YYACCEPT instead of return
+
 Sat Mar 13 22:22:56 1999  Assar Westerlund  <assar@sics.se>
 
 	* compile_et.c (generate_h): cast when calling is* to get rid of a
